блокнот с выполненным кодом

--- a/course_work.ipynb
+++ b/course_work.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 14,
       "metadata": {
         "id": "dBTA7aRD_Qr8"
       },
@@ -45,8 +45,8 @@
       "source": [
         "**Загрузка json в Google Colab**\n",
         "\n",
-        "1. 'from google.colab import files': импорт модуля 'files' из библиотеки 'google.colab', который предоставляет функции для работы с файлами в среде Google Colab;\n",
-        "2. 'uploaded = files.upload()': открытие диалогового окна, которое способствует загурзке файлов."
+        "1. 'from google.colab import files' - импорт модуля 'files' из библиотеки 'google.colab', который предоставляет функции для работы с файлами в среде Google Colab;\n",
+        "2. 'uploaded = files.upload()' - открытие диалогового окна, которое способствует загурзке файлов."
       ],
       "metadata": {
         "id": "5NYX7xWnSa6D"
@@ -64,9 +64,9 @@
           "height": 73
         },
         "id": "RNshbRmjF7L0",
-        "outputId": "4cb0f84b-9c01-43dd-eeb1-d859f0f9877a"
+        "outputId": "702f6262-a0da-464c-8d5b-6d191cda2917"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -76,9 +76,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-5db5c12b-b1c4-4754-96bd-ba996b475cce\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-64882dad-3f97-4efe-9edf-4e7d0439eb9a\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-5db5c12b-b1c4-4754-96bd-ba996b475cce\">\n",
+              "     <output id=\"result-64882dad-3f97-4efe-9edf-4e7d0439eb9a\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -306,7 +306,18 @@
       "metadata": {
         "id": "YObVgEY9F2zU"
       },
-      "execution_count": 21,
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "getUrls(\"verified_online.json\", \"phishing_urls.txt\")"
+      ],
+      "metadata": {
+        "id": "o1pBkqtU5RAQ"
+      },
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -355,7 +366,7 @@
       "metadata": {
         "id": "mbbR2WJ8KSDt"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -586,7 +597,7 @@
       "metadata": {
         "id": "ElmyJu8mMDGh"
       },
-      "execution_count": 70,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -698,10 +709,34 @@
         "\n",
         "\n",
         "---\n",
-        "\n"
+        "*Примечания для столбчатых диаграмм*:\n",
+        "\n",
+        "1. 'plt.bar()' - создает столбчатые диаграммы\n",
+        "2. 'plt.axhline()' - создает параллельную ос OX линию (показывает среднее значение)\n",
+        "3. 'plt.xlabel()' - полпись оси OX\n",
+        "4. 'plt.ylabel()' - полпись оси OY\n",
+        "5. 'plt.title()' - заголовок графика\n",
+        "6. 'plt.legend()' - создание легенды\n",
+        "7. 'plt.show()' - показ графика\n",
+        "\n",
+        "*Примечания для круговых диаграмм*:\n",
+        "\n",
+        "1. 'plt.pie()' - создает круговую диаграмму\n",
+        "2. 'plt.axis(\"equal\")' - делает диаграмму идеально круглой\n"
       ],
       "metadata": {
         "id": "yAJKlIr7ZUrX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа числа терминов в доменных именах фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "xwDD1O7Ir3Z7"
       }
     },
     {
@@ -721,7 +756,7 @@
       "metadata": {
         "id": "iQurv53bMtLc"
       },
-      "execution_count": 38,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -735,9 +770,9 @@
           "height": 472
         },
         "id": "k3qazAszMwB9",
-        "outputId": "e0c55888-79f2-456b-a298-01311903fab2"
+        "outputId": "9cbbfea3-e815-41c0-a65d-fba87167c891"
       },
-      "execution_count": 71,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -750,6 +785,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа длины доменных имен фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "Qf23ZsiCsT7u"
+      }
     },
     {
       "cell_type": "code",
@@ -768,7 +814,7 @@
       "metadata": {
         "id": "eVYqqkCUNJ3n"
       },
-      "execution_count": 41,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -782,9 +828,9 @@
           "height": 472
         },
         "id": "r4boQJFKNMV3",
-        "outputId": "c9ec6d05-803d-4af1-e242-21ee4f527509"
+        "outputId": "7ab955b4-664e-43f3-e7d8-dbf3632810c8"
       },
-      "execution_count": 42,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -797,6 +843,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа количества слэшей в фишинговых URL-адресах**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "hefHl_8VskWB"
+      }
     },
     {
       "cell_type": "code",
@@ -815,7 +872,7 @@
       "metadata": {
         "id": "sCUtHjYyNXT2"
       },
-      "execution_count": 43,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -829,9 +886,9 @@
           "height": 472
         },
         "id": "4fQYiXvVNe_O",
-        "outputId": "1b723da5-482a-4904-dbd0-00d91a2cd6cc"
+        "outputId": "6ea2e746-910e-4122-8717-0bfd9c3756c4"
       },
-      "execution_count": 51,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -844,6 +901,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа наличия специальных символов в доменном имени фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "lOqscs0zsnFe"
+      }
     },
     {
       "cell_type": "code",
@@ -860,7 +928,7 @@
       "metadata": {
         "id": "55BXqPhQNiWr"
       },
-      "execution_count": 44,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -874,9 +942,9 @@
           "height": 428
         },
         "id": "9kuEvMS4NlDo",
-        "outputId": "5b84fc44-386b-4cbd-ec4d-dbb109c5aa2c"
+        "outputId": "30bcab79-987a-4135-a9f0-cf1f7a501535"
       },
-      "execution_count": 52,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -889,6 +957,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа наличия IP-адреса в доменном имени фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "SZVmKaS-soRh"
+      }
     },
     {
       "cell_type": "code",
@@ -905,7 +984,7 @@
       "metadata": {
         "id": "as5QSBf5NoWA"
       },
-      "execution_count": 45,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -919,9 +998,9 @@
           "height": 428
         },
         "id": "ltO5z9UjNrfl",
-        "outputId": "61140812-a475-44e4-e14f-8c615be94c18"
+        "outputId": "cfa324db-d375-45c4-febd-ec03715cef59"
       },
-      "execution_count": 53,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "display_data",
@@ -934,6 +1013,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа наличия юникода в фишинговых URL адресах**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "exjvJMWYspQz"
+      }
     },
     {
       "cell_type": "code",
@@ -964,9 +1054,9 @@
           "height": 428
         },
         "id": "ylP4U18GN3uq",
-        "outputId": "b7e27b58-f7d3-4689-8b78-32e4d81ed4a4"
+        "outputId": "de2e9c4e-2ed8-41ca-83a4-d4ab922424b9"
       },
-      "execution_count": 54,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -979,6 +1069,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа наличия http протокола в фишинговых URL адресах**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "ZV9xOVQLsqYS"
+      }
     },
     {
       "cell_type": "code",
@@ -995,7 +1096,7 @@
       "metadata": {
         "id": "ZYSGYS9kN6Q1"
       },
-      "execution_count": 47,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -1009,9 +1110,9 @@
           "height": 428
         },
         "id": "gRj3Deo5ODN_",
-        "outputId": "76583600-91e5-41d2-f928-9b07b661bc8b"
+        "outputId": "9eb947d5-e924-45b5-c098-c767210fd7c8"
       },
-      "execution_count": 55,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1024,6 +1125,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа наличия поддомена в фишинговых URL адресах**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "EwZvsZWzsrne"
+      }
     },
     {
       "cell_type": "code",
@@ -1040,7 +1152,7 @@
       "metadata": {
         "id": "3ISTFwlDOFxT"
       },
-      "execution_count": 48,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1054,9 +1166,9 @@
           "height": 428
         },
         "id": "GT2XYqI5OJCq",
-        "outputId": "786c713e-f0e0-4b5b-ef63-26ac813c158b"
+        "outputId": "a904be01-659d-401a-f797-a6945474d0fd"
       },
-      "execution_count": 56,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1069,6 +1181,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа ключевых слов в пути фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами\n",
+        "\n",
+        "*Примечание*: перед построением графика из полученных на вход данных удаляются слова, которые встречаются достаточно редко"
+      ],
+      "metadata": {
+        "id": "Sp3AofPQstqZ"
+      }
     },
     {
       "cell_type": "code",
@@ -1092,7 +1217,7 @@
       "metadata": {
         "id": "21ikK_VcOL9D"
       },
-      "execution_count": 49,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1106,9 +1231,9 @@
           "height": 472
         },
         "id": "OWBaCZ_4OPKh",
-        "outputId": "afa12306-e4e2-441f-a1e9-3ce055b775c1"
+        "outputId": "cd4ad044-df20-45fd-801b-24164414484f"
       },
-      "execution_count": 57,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,6 +1246,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "jwY2D8V5suqn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа количества точек в пути фишинговых URL адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "C7LnZCYisuu2"
+      }
     },
     {
       "cell_type": "code",
@@ -1139,7 +1282,7 @@
       "metadata": {
         "id": "ZhfBc0dxOTG4"
       },
-      "execution_count": 50,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -1153,9 +1296,9 @@
           "height": 472
         },
         "id": "tSdWoY4IOVuO",
-        "outputId": "0d4d26fc-09ff-4c24-8ba2-1cb49c16ab6b"
+        "outputId": "ebfe74c2-9819-42e6-be40-8c1c4e51dd90"
       },
-      "execution_count": 58,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1168,6 +1311,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**График анализа длины фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами"
+      ],
+      "metadata": {
+        "id": "92X4b_ylsvqJ"
+      }
     },
     {
       "cell_type": "code",
@@ -1188,7 +1342,7 @@
       "metadata": {
         "id": "W3usIObeOZJI"
       },
-      "execution_count": 61,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1202,9 +1356,9 @@
           "height": 472
         },
         "id": "-ajENSJRObav",
-        "outputId": "075fbe03-f896-4987-ab53-7ba9a98db930"
+        "outputId": "76d760bc-217b-4dc9-af02-175449b971e2"
       },
-      "execution_count": 62,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1217,6 +1371,36 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Создание DataFrame, содержащих результаты анализа**\n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "qolAGC5wyMBT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**DataFrame количественных характеристик**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами\n",
+        "\n",
+        "*Выходные данные*: DataFrame с результатами анализа\n",
+        "\n",
+        "Примечания:\n",
+        "  1. Количественными характеристиками будем считать такие характеристики, как число терминов, слэшей, точек в пути, длина доменных имен, URL-адресов\n",
+        "  2. 'np.min()' - возвращает минимальное значение из массива NumPy\n",
+        "  3. 'np.max()' - возвращает максимальное значение из массива NymPy\n",
+        "  4. 'np.mean()' - возвращает среднее значение из массива NumPy\n"
+      ],
+      "metadata": {
+        "id": "SaR8wSufzalm"
+      }
     },
     {
       "cell_type": "code",
@@ -1241,8 +1425,23 @@
       "metadata": {
         "id": "4d6aS7jgOear"
       },
-      "execution_count": 63,
+      "execution_count": 58,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**DataFrame анализа наличия конкретных признаков**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами\n",
+        "\n",
+        "*Выходные данные*: DataFrame с результатами анализа\n",
+        "\n",
+        "*Примечание*: перед созданием DataFrame рассчитываются процентные соотношения распространенности конкретных признаков"
+      ],
+      "metadata": {
+        "id": "0uiJ1h2B00dj"
+      }
     },
     {
       "cell_type": "code",
@@ -1272,8 +1471,23 @@
       "metadata": {
         "id": "qDRnM0aOPX6_"
       },
-      "execution_count": 65,
+      "execution_count": 59,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**DataFrame ключевых слов в пути фишинговых URL-адресов**\n",
+        "\n",
+        "*Входные данные*: путь к файлу с фишинговыми URL-адресами\n",
+        "\n",
+        "*Выходные данные*: DataFrame с результатами анализа\n",
+        "\n",
+        "*Примечание*: перед созданием DataFrame из полученных на вход данных удаляются слова, которые встречаются достаточно редко"
+      ],
+      "metadata": {
+        "id": "Mgan9OQU1U68"
+      }
     },
     {
       "cell_type": "code",
@@ -1296,8 +1510,19 @@
       "metadata": {
         "id": "3zLxE6_tPbOj"
       },
-      "execution_count": 66,
+      "execution_count": 60,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Сохранение результатов анализа в .xlsx файл**\n",
+        "\n",
+        "*Входные данные*: путь сохранения .xlsx файла, путь к файлу с фишинговыми адресами"
+      ],
+      "metadata": {
+        "id": "vER9SiB12aJD"
+      }
     },
     {
       "cell_type": "code",
@@ -1314,7 +1539,7 @@
       "metadata": {
         "id": "bY1GlNxNPeiL"
       },
-      "execution_count": 67,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -1325,7 +1550,7 @@
       "metadata": {
         "id": "CCu3i7k2PiPF"
       },
-      "execution_count": 68,
+      "execution_count": 62,
       "outputs": []
     }
   ]
